# Fusion

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  engine-log.txt  game-log.txt  imgui.ini  imgui_b.ini  shaders.sh
assetlib/: CMakeLists.txt
assetlib/src/: AssetLoader.cpp  AssetLoader.hpp  TextureAsset.cpp  TextureAsset.hpp
editor/: CMakeLists.txt  EditorApp.cpp  EditorApp.hpp  editor_app.cpp  editor_app.hpp  editorapp.cpp  editorapp.hpp
editor/src/: EditorLayer.cpp  EditorLayer.hpp  database.cpp  database.hpp  editor.cpp  editor.h  editor.hpp  editor_app.cpp  editor_app.hpp  editor_layer.cpp  editor_layer.hpp  editor_renderer.h  editor_renderer.hpp  file_registry.cpp  file_registry.hpp  file_watcher.cpp  file_watcher.hpp  main.cpp  main_renderer.cpp  main_renderer.hpp
editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.hpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
editor/src/content/: asset.cpp  asset.hpp  asset_registry.cpp  asset_registry.hpp
editor/src/panels/: application_info_panel.cpp  application_info_panel.h  application_info_panel.hpp  console_panel.cpp  console_panel.h  console_panel.hpp  content_browser_panel.cpp  content_browser_panel.h  content_browser_panel.hpp  editor_panel.h  editor_panel.hpp  editor_settings_panel.cpp  editor_settings_panel.h  editor_settings_panel.hpp  file_browser_panel.cpp  file_browser_panel.h  file_browser_panel.hpp  file_explorer_panel.cpp  file_explorer_panel.hpp  game_view_panel.cpp  game_view_panel.h  game_view_panel.hpp  hierarchy_panel.cpp  hierarchy_panel.h  hierarchy_panel.hpp  inspector_panel.cpp  inspector_panel.h  inspector_panel.hpp  project_settings_panel.cpp  project_settings_panel.h  project_settings_panel.hpp  scene_hierarchy_panel.cpp  scene_hierarchy_panel.hpp  scene_view_panel.cpp  scene_view_panel.h  scene_view_panel.hpp  text_edit_panel.cpp  text_edit_panel.h  text_edit_panel.hpp
engine/: CMakeLists.txt  Version.cmake  git.cmake  git_version.cmake  version.cmake
engine/assets/shaders/: brdf.comp  irradiance.comp  noise.glsl  prefiltered.comp
engine/assets/shaders/debug/: point.frag
engine/assets/shaders/default/: default.frag  default.vert
engine/assets/shaders/deferred/: deferred.frag  deferred.vert  lighting.glsl
engine/assets/shaders/fonts/: font.frag  font.vert
engine/assets/shaders/gizmos/: gizmo.frag  gizmo.vert
engine/assets/shaders/grid/: grid.frag  grid.vert
engine/assets/shaders/guis/: gui.frag  gui.vert
engine/assets/shaders/imgui/: imgui.frag  imgui.vert
engine/assets/shaders/model/: models.frag  models.vert
engine/assets/shaders/particles/: particle.frag  particle.vert
engine/assets/shaders/post/: blit.frag  blur.frag  crt.frag  darken.frag  default.frag  dof.frag  emboss.frag  fxaa.frag  grain.frag  grey.frag  lensflare.frag  negative.frag  pixel.frag  sepia.frag  ssao.frag  tiltshift.frag  tone.frag  vignette.frag  wobble.frag
engine/assets/shaders/simple/: light.frag  light.vert  main.frag  main.vert  simple.frag  simple.vert
engine/assets/shaders/sky/: atmosphere.frag  atmosphere.vert  skybox.frag  skybox.vert
engine/assets/shaders/skyboxes/: skybox.frag  skybox.vert
engine/script-core/: build.bat
engine/script-core/src/Fusion/: InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs  Vector4.cs
engine/src/: Fusion.hpp  config.cpp.in  config.hpp  fspch.hpp  pch.h  pch.hpp
engine/src/Fusion/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Window.hpp
engine/src/Fusion/Asset/: TextureAsset.cpp  TextureAsset.hpp
engine/src/Fusion/Core/: Application.cpp  Application.hpp  Base.hpp  EntryPoint.hpp  Event.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
engine/src/Fusion/Editor/: EditorCamera.cpp  EditorCamera.hpp  EditorLayer.cpp  EditorLayer.hpp
engine/src/Fusion/Events/: ApplicationEvents.hpp  Event.cpp  Event.hpp  EventQueue.hpp  KeyEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
engine/src/Fusion/Geometry/: AABB.cpp  AABB.hpp  Frustum.cpp  Frustum.hpp  Geometry.cpp  Geometry.hpp  Plane.cpp  Plane.hpp  Ray.cpp  Ray.hpp  Sphere.cpp  Sphere.hpp
engine/src/Fusion/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
engine/src/Fusion/Input/: BaseInput.cpp  BaseInput.hpp  Input.cpp  Input.hpp  KeyInput.cpp  KeyInput.hpp  MouseCodes.hpp  MouseInput.cpp  MouseInput.hpp
engine/src/Fusion/Renderer/: AllocatedBuffer.cpp  AllocatedBuffer.hpp  Camera.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  EditorCamera.cpp  EditorCamera.hpp  ExampleBase.cpp  Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  Offscreen.cpp  Offscreen.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Pipeline.cpp  Pipeline.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Vulkan.cpp  Vulkan.hpp  VulkanTools.cpp  VulkanTools.hpp  Window.cpp  Window.hpp
engine/src/Fusion/Scene/: Components.hpp  Scene.cpp  Scene.hpp  SceneCamera.hpp  SceneSerializer.cpp  SceneSerializer.hpp
engine/src/Fusion/Systems/: MeshRenderer.cpp  MeshRenderer.hpp  RendererSystemBase.cpp  RendererSystemBase.hpp
engine/src/Fusion/Utils/: Extentions.cpp  Extentions.hpp  Math.cpp  Math.hpp  ProcessInfo.cpp  ProcessInfo.hpp
engine/src/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
engine/src/Platform/Shared/: SystemInput.cpp  SystemInput.hpp
engine/src/Renderer/OpenGL/: OpenGLWindow.cpp  OpenGLWindow.hpp
engine/src/fusion/assets/: asset.h  asset.hpp  asset_database.cpp  asset_database.h  asset_manager.cpp  asset_manager.hpp  asset_registry.cpp  asset_registry.h  asset_registry.hpp
engine/src/fusion/bitmaps/: bitmap.cpp  bitmap.h  bitmap.hpp  bitmap_factory.h  bitmap_factory.hpp  gli_bitmap.cpp  gli_bitmap.h  gli_loader.cpp  gli_loader.hpp  gli_toolbox.cpp  gli_toolbox.h  gli_toolbox.hpp  stb_bitmap.cpp  stb_bitmap.h  stb_loader.cpp  stb_loader.hpp  stb_toolbox.cpp  stb_toolbox.h  stb_toolbox.hpp
engine/src/fusion/core/: android.cpp  android.hpp  (+42 more)
(+826 files in other folders)
